@@ -82,6 +82,30 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|atomic
+operator|.
+name|AtomicBoolean
+import|;
+end_import
+
+begin_import
+import|import
 name|junit
 operator|.
 name|framework
@@ -140,6 +164,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|net
+operator|.
+name|NetUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|util
 operator|.
 name|JarFinder
@@ -157,6 +195,60 @@ operator|.
 name|util
 operator|.
 name|Shell
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|ApplicationReport
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|YarnApplicationState
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|client
+operator|.
+name|api
+operator|.
+name|YarnClient
 import|;
 end_import
 
@@ -689,6 +781,7 @@ argument_list|(
 literal|"Initializing DS Client"
 argument_list|)
 expr_stmt|;
+specifier|final
 name|Client
 name|client
 init|=
@@ -729,14 +822,203 @@ argument_list|(
 literal|"Running DS Client"
 argument_list|)
 expr_stmt|;
-name|boolean
+specifier|final
+name|AtomicBoolean
 name|result
 init|=
+operator|new
+name|AtomicBoolean
+argument_list|(
+literal|false
+argument_list|)
+decl_stmt|;
+name|Thread
+name|t
+init|=
+operator|new
+name|Thread
+argument_list|()
+block|{
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+try|try
+block|{
+name|result
+operator|.
+name|set
+argument_list|(
 name|client
 operator|.
 name|run
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
+block|}
+empty_stmt|;
+block|}
 decl_stmt|;
+name|t
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|YarnClient
+name|yarnClient
+init|=
+name|YarnClient
+operator|.
+name|createYarnClient
+argument_list|()
+decl_stmt|;
+name|yarnClient
+operator|.
+name|init
+argument_list|(
+operator|new
+name|Configuration
+argument_list|(
+name|yarnCluster
+operator|.
+name|getConfig
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|yarnClient
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|String
+name|hostName
+init|=
+name|NetUtils
+operator|.
+name|getHostname
+argument_list|()
+decl_stmt|;
+name|boolean
+name|verified
+init|=
+literal|false
+decl_stmt|;
+while|while
+condition|(
+operator|!
+name|verified
+condition|)
+block|{
+name|List
+argument_list|<
+name|ApplicationReport
+argument_list|>
+name|apps
+init|=
+name|yarnClient
+operator|.
+name|getApplications
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|apps
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|0
+condition|)
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|10
+argument_list|)
+expr_stmt|;
+continue|continue;
+block|}
+name|ApplicationReport
+name|appReport
+init|=
+name|apps
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|appReport
+operator|.
+name|getHost
+argument_list|()
+operator|.
+name|startsWith
+argument_list|(
+name|hostName
+argument_list|)
+operator|&&
+name|appReport
+operator|.
+name|getRpcPort
+argument_list|()
+operator|==
+operator|-
+literal|1
+condition|)
+block|{
+name|verified
+operator|=
+literal|true
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|appReport
+operator|.
+name|getYarnApplicationState
+argument_list|()
+operator|==
+name|YarnApplicationState
+operator|.
+name|FINISHED
+condition|)
+block|{
+break|break;
+block|}
+block|}
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|verified
+argument_list|)
+expr_stmt|;
+name|t
+operator|.
+name|join
+argument_list|()
+expr_stmt|;
 name|LOG
 operator|.
 name|info
@@ -751,6 +1033,9 @@ operator|.
 name|assertTrue
 argument_list|(
 name|result
+operator|.
+name|get
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
