@@ -168,6 +168,9 @@ Release 2.1.2 - UNRELEASED
     YARN-1251. TestDistributedShell#TestDSShell failed with timeout. (Xuan Gong
     via hitesh)
 
+    YARN-1167. Fixed Distributed Shell to not incorrectly show empty hostname
+    on RM UI. (Xuan Gong via vinodkv)
+
 Release 2.1.1-beta - 2013-09-23
 
   INCOMPATIBLE CHANGES
